# bspmis

./: CMakeLists.txt  Makefile  Remove self edges.ipynb  a.out  bspmattoicrs.c  bspmis.c  main  mondriaan_example.c  visualisation
Source_changes/: bspsparse_input.c  bspsparse_input.h
checking_solutions/: check-MIS.py
data/G10/: G10.mtx  G10.mtx-C4  G10.mtx-I4  G10.mtx-P4  G10.mtx-local4  G10.mtx-reor-P4  G10.mtx-u4  G10.mtx-v4
data/G11/: G11.mtx  G11.mtx-C2  G11.mtx-I2  G11.mtx-P2  G11.mtx-P4  G11.mtx-local2  G11.mtx-reor-P2  G11.mtx-u2  G11.mtx-v2  ca-GrQc.mtx-P4
data/ca-GrQc/: ca-GrQc.mtx-C2  ca-GrQc.mtx-C4  ca-GrQc.mtx-I2  ca-GrQc.mtx-I4  ca-GrQc.mtx-P2  ca-GrQc.mtx-P4  ca-GrQc.mtx-local2  ca-GrQc.mtx-local4  ca-GrQc.mtx-reor-P2  ca-GrQc.mtx-reor-P4  ca-GrQc.mtx-u2  ca-GrQc.mtx-u4  ca-GrQc.mtx-v2  ca-GrQc.mtx-v4
data/geom/: geom.mtx  geom.mtx-C4  geom.mtx-I4  geom.mtx-P4  geom.mtx-local4  geom.mtx-reor-P4  geom.mtx-u4  geom.mtx-v4  geom_nodename.txt
data/testmatrix/: ca-GrQc-2.mtx-P4  ca-GrQc-5-short-weigth.mtx-P2  ca-GrQc-5-short.mtx-P2  test.mtx  test.mtx-C2  test.mtx-I2  test.mtx-P2  test.mtx-local2  test.mtx-reor-P2  test.mtx-u2  test.mtx-v2  test_unordered_unbalanced.mtx-P2
delete_self_edges/: ca-GrQc-without-loops.mtx-P4  ca-GrQc.mtx-P4  delete_loops.py
snellius-files/: Makefile  bspmis.c  runscript
tools/: bspmis.c
tools/checking_solutions/: ca-GrQc-test.mtx  ca-GrQc.mtx  check-MIS.py
tools/delete_self_edges/: bspmis.c  delete_loops.py
tools/visualisation/: network-vis-2.py
